# quantum-neural-network

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GRADIENT_FIX_JOURNEY.md  LICENSE  PORTFOLIO_ROADMAP.md  PROJECT_STATUS.md  README.md  check_quantum_layer_shape.py  ci_log.txt  claude.md  debug_imports.py  medical_example_fixed.py  medical_example_quick.py  medical_example_working.py  pyproject.toml  sanity_check.py  setup.cfg  test_core_functionality.py  test_gradient_flow.py  test_input_shape_fix.py  test_medical_fixes.py  test_quantum_gradient.py  test_quantum_layer_direct.py
.comp/: pyvenv.cfg
.github/workflows/: cd.yml  ci.yml
docs/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md
docs/applications/: medical_image_classification_plan.md
scripts/: run_benchmark.py
src/quantum_nn/: __init__.py
src/quantum_nn/applications/: __init__.py  quantum_embedding.py
src/quantum_nn/applications/medical_imaging/: __init__.py  demo_medical_imaging.py  test_setup.py
src/quantum_nn/applications/medical_imaging/data/: config.py  downloader.py
src/quantum_nn/applications/medical_imaging/models/: __init__.py  hybrid_model.py  quantum_classifier.py
src/quantum_nn/applications/medical_imaging/preprocessing/: __init__.py  data_pipeline.py  image_processor.py
src/quantum_nn/benchmarks/: __init__.py  benchmark_runner.py  classical_comparison.py  tasks.py
src/quantum_nn/circuits/: __init__.py  base.py  encodings.py  parameterized_circuit.py  templates.py
src/quantum_nn/data/: __init__.py
src/quantum_nn/layers/: __init__.py  pennylane_quantum_layer.py  quantum_layer.py
src/quantum_nn/models/: __init__.py  quantum_model.py
src/quantum_nn/optimizers/: __init__.py  natural_gradient.py  parameter_shift.py  quantum_aware_optimizer.py  run_download_action.sh  spsa.py
src/quantum_nn/utils/: __init__.py
src/quantum_nn/visualization/: __init__.py  circuit_drawer.py  state_visualization.py  training_visualization.py
stubs/kaggle/: __init__.pyi
tests/integration/: test_medical_imaging_integration.py
tests/unit/applications/: __init__.py
tests/unit/applications/medical_imaging/: __init__.py  test_models.py  test_preprocessing.py
tests/unit/benchmarks/: test_benchmark_runner.py  test_classical_comparison.py  test_tasks.py
tests/unit/circuits/: test_encodings.py  test_parameterized_circuit.py  test_templates.py
tests/unit/layers/: test_quantum_layer.py
tests/unit/models/: test_quantum_model.py
tests/unit/optimizers/: test_natural_gradient.py  test_parameter_shift.py  test_spsa.py
tests/unit/visualization/: test_circuit_drawer.py  test_state_visualization.py  test_training_visualization.py
