[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_neural_net"
version = "0.1.0"
description = "Quantum Neural Network Framework"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "tensorflow>=2.9.0",
    "pennylane>=0.24.0",
    "qiskit>=0.37.0",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.3.0",
    "isort==5.13.2",
    "mypy>=0.950",
    "pylint>=2.13.0",
    "pre-commit>=2.18.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
follow_imports = "silent"
no_site_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"